--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -10,173 +10,191 @@
 #         or http://www.debian.org/intl/l10n/po-debconf/README-trans
 #
 #    Developers do not need to manually edit POT or PO files.
-#, fuzzy
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-10-29 11:01+0100\n"
-"PO-Revision-Date: 2003-09-03 06:25+0900\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: canna 3.7p3-6.2\n"
+"Report-Msgid-Bugs-To: canna@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-03 07:53+0200\n"
+"PO-Revision-Date: 2009-04-20 05:56+0900\n"
+"Last-Translator: Hideki Yamane (Debian-JP) <henrich@debian.or.jp>\n"
+"Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
 #. Description
-#: ../templates:1001
-msgid "Do you want to run the Canna server ?"
-msgstr "¤«¤ó¤Ê¥µ¡¼¥Ğ¤òµ¯Æ°¤·¤Ş¤¹¤«?"
+#: ../templates:2001
+msgid "Should the Canna server run automatically?"
+msgstr "è‡ªå‹•çš„ã«ã‹ã‚“ãªã‚µãƒ¼ãƒã‚’å®Ÿè¡Œã—ã¾ã™ã‹?"
 
 #. Type: boolean
 #. Description
-#: ../templates:1001
+#: ../templates:2001
 msgid ""
 "This package contains the Canna server and server-related utilities. If you "
-"are only interested in these utilities, you can disable the Canna server "
-"here."
+"are only interested in these utilities, you can disable the Canna server now."
 msgstr ""
-"¤³¤Î¥Ñ¥Ã¥±¡¼¥¸¤Ï¤«¤ó¤Ê¥µ¡¼¥Ğ¤È¥µ¡¼¥Ğ¤Ë´Ø·¸¤·¤¿¥æ¡¼¥Æ¥£¥ê¥Æ¥£¤ò ´Ş¤ó¤Ç¤¤¤Ş¤¹¡£"
-"¤â¤·¡¢¥µ¡¼¥Ğ´ØÏ¢¤Î¥æ¡¼¥Æ¥£¥ê¥Æ¥£¤Ë¤Î¤ß¶½Ì£¤¬¤¢¤ë¤Î¤Ç¤¢¤ì¤Ğ¡¢¤«¤ó¤Ê¥µ¡¼¥Ğ¤¬µ¯"
-"Æ°¤¹¤ë¤Î¤òÌµ¸ú¤Ë¤¹¤ë¤³¤È¤¬¤Ç¤­¤Ş¤¹¡£"
-
-#. Type: boolean
-#. Description
-#: ../templates:2001
-#, fuzzy
-msgid "Do you want to connect to the Canna server from a remote host?"
-msgstr "±ó³Ö¤Î¥Û¥¹¥È¤«¤é¤«¤ó¤Ê¥µ¡¼¥Ğ¤ËÀÜÂ³¤·¤Ş¤¹¤«?"
-
-#. Type: boolean
-#. Description
-#: ../templates:2001
-#, fuzzy
-msgid ""
-"The Canna server only allows connections via UNIX domain sockets when the `-"
-"inet' option is not specified.  This means that when the Canna server is "
-"started without the `-inet' option, only clients which run on the same host "
-"can connect to the server. Some clients such as, `egg' and `yc-el', do not "
-"support UNIX domain socket and require the `-inet' option, even if they run "
-"on the same host."
-msgstr ""
-"¤³¤Î¥Ğ¡¼¥¸¥ç¥ó¤Î¤«¤ó¤Ê¥µ¡¼¥Ğ¤Ï inet ¥ª¥×¥·¥ç¥ó¤¬¤Ê¤¤¾ì¹ç¡¢UNIX ¥É¥á¥¤¥ó¥½¥±¥Ã"
-"¥È·ĞÍ³¤Ç¤·¤«ÀÜÂ³¤Ç¤­¤Ş¤»¤ó(¥»¥­¥å¥ê¥Æ¥£¤Î¶¯²½¤Î ¤¿¤á¤Ç¤¹)¡£¤³¤ì¤Ï inet ¥ª¥×"
-"¥·¥ç¥ó¤Ê¤·¤Çµ¯Æ°¤·¤¿¤«¤ó¤Ê¥µ¡¼¥Ğ ¤Ë¤ÏÆ±¤¸¥Û¥¹¥È¤ÇÆ°¤¤¤Æ¤¤¤ë¥¯¥é¥¤¥¢¥ó¥È¤«¤é¤·"
-"¤«ÀÜÂ³¤Ç¤­¤Ê¤¤ ¤³¤È¤ò°ÕÌ£¤·¤Ş¤¹¡£¤Ş¤¿ `egg' ¤ä`yc-el'¤Î¤è¤¦¤Ë UNIX ¥É¥á¥¤¥ó¥½"
-"¥±¥Ã¥È¤ò ¥µ¥İ¡¼¥È¤·¤Æ¤¤¤Ê¤¤¤¤¤¯¤Ä¤«¤Î¥¯¥é¥¤¥¢¥ó¥È¤Ç¤Ï¡¢¤½¤Î¥¯¥é¥¤¥¢¥ó¥È ¤¬Æ±"
-"¤¸¥Û¥¹¥È¤ÇÆ°ºî¤·¤Æ¤¤¤¿¤È¤·¤Æ¤â¡¢inet ¥ª¥×¥·¥ç¥ó¤òÍøÍÑ¤¹¤ë É¬Í×¤¬¤¢¤ê¤Ş¤¹¡£"
-
-#. Type: boolean
-#. Description
-#: ../templates:2001
-#, fuzzy
-msgid ""
-"If you want to connect to this Canna server from remote hosts, or if you "
-"want to use INET-domain-only software, you should run the server with the `-"
-"inet' option."
-msgstr ""
-"¤â¤·¡¢¤³¤Î¤«¤ó¤Ê¥µ¡¼¥Ğ¤Ë¥ê¥â¡¼¥È¥Û¥¹¥È¤«¤é¤âÀÜÂ³¤·¤¿¤¤¾ì¹ç¡¢ ¤â¤·¤¯¤Ï¡¢UNIX "
-"¥É¥á¥¤¥ó¥½¥±¥Ã¥È¤òÍøÍÑ¤Ç¤­¤Ê¤¤¥¯¥é¥¤¥¢¥ó¥È ¤ò»È¤¦¾ì¹ç¡¢inet ¥ª¥×¥·¥ç¥ó¤ò¤Ä¤±"
-"¤Æ¥µ¡¼¥Ğ¤òµ¯Æ°¤·¤Ê¤±¤ì¤Ğ ¤Ê¤ê¤Ş¤»¤ó¡£"
+"ã“ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã¯ã‹ã‚“ãªã‚µãƒ¼ãƒã¨ã‚µãƒ¼ãƒã«é–¢ä¿‚ã—ãŸãƒ¦ãƒ¼ãƒ†ã‚£ãƒªãƒ†ã‚£ã‚’å«ã‚“ã§ã„ã¾ã™ã€‚"
+"ã‚‚ã—ã€ãƒ¦ãƒ¼ãƒ†ã‚£ãƒªãƒ†ã‚£ã«ã®ã¿èˆˆå‘³ãŒã‚ã‚‹ã®ã§ã‚ã‚Œã°ã€ã‹ã‚“ãªã‚µãƒ¼ãƒãŒèµ·å‹•ã™ã‚‹ã®ã‚’ã“"
+"ã“ã§ç„¡åŠ¹ã«ã™ã‚‹ã“ã¨ãŒã§ãã¾ã™ã€‚"
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
-msgid "Manage /etc/hosts.canna with debconf ?"
-msgstr "/etc/hosts.canna ¤ò debconf ¤Ç´ÉÍı¤·¤Ş¤¹¤«?"
-
-#. Type: boolean
-#. Description
-#: ../templates:3001
-#, fuzzy
-msgid "/etc/hosts.canna controls which hosts can connect to this server."
-msgstr ""
-"/etc/host.canna ¤Ï¤É¤Î¥Û¥¹¥È¤¬¤³¤Î¤«¤ó¤Ê¥µ¡¼¥Ğ¤ËÀÜÂ³¤Ç¤­¤ë¤«¤ò À©¸æ¤·¤Ş¤¹¡£"
+msgid "Should the Canna server run in network mode?"
+msgstr "ã‹ã‚“ãªã‚µãƒ¼ãƒã‚’ãƒãƒƒãƒˆãƒ¯ãƒ¼ã‚¯ãƒ¢ãƒ¼ãƒ‰ã§å‹•ä½œã•ã›ã‚‹ã‚ˆã†ã«ã—ã¾ã™ã‹?"
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"By default /etc/hosts.canna will be managed with debconf. Refuse here if you "
-"want to manage /etc/hosts.canna yourself."
+"By default the Canna server will run without support for network "
+"connections, and will only accept connections on UNIX domain sockets, from "
+"clients running on the same host."
 msgstr ""
-"/etc/hosts.canna¤Ï¥Ç¥Õ¥©¥ë¥È¤Ç¤Ïdebconf¤Ç´ÉÍı¤µ¤ì¤Ş¤¹¡£¼êÆ°¤Ç´ÉÍı¤·¤¿¤¤¾ì¹ç"
-"¤Ï¡¢¤³¤³¤ÇµñÈİ¤·¤Æ¤¯¤À¤µ¤¤¡£"
+"ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã§ã¯ã‹ã‚“ãªã‚µãƒ¼ãƒã¯ãƒãƒƒãƒˆãƒ¯ãƒ¼ã‚¯æ¥ç¶šã®ã‚µãƒãƒ¼ãƒˆã‚’ç„¡ã—ã§å‹•ä½œã—ã€åŒã˜ãƒ›"
+"ã‚¹ãƒˆä¸Šã§å‹•ä½œã—ã¦ã„ã‚‹ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‹ã‚‰ã® UNIX ãƒ‰ãƒ¡ã‚¤ãƒ³æ¥ç¶šã®ã¿ã‚’å—ã‘ä»˜ã‘ã¾ã™ã€‚"
+
+#. Type: boolean
+#. Description
+#: ../templates:3001
+msgid ""
+"If you choose this option, network support will be activated, and the Canna "
+"server will accept connections on TCP sockets from clients that may be on "
+"remote hosts. Some clients (such as egg and yc-el) require this mode even if "
+"they run on the local host."
+msgstr ""
+"ã“ã®é¸æŠè‚¢ã‚’é¸ã‚“ã å ´åˆã€ãƒãƒƒãƒˆãƒ¯ãƒ¼ã‚¯ã‚µãƒãƒ¼ãƒˆãŒæœ‰åŠ¹ã«ãªã‚Šã€ã‹ã‚“ãªã‚µãƒ¼ãƒã¯ãƒª"
+"ãƒ¢ãƒ¼ãƒˆã«ã‚ã‚‹ã§ã‚ã‚ã†ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‹ã‚‰ã® TCP ã‚½ã‚±ãƒƒãƒˆæ¥ç¶šã‚’å—ã‘å…¥ã‚Œã‚‹ã‚ˆã†ã«ãªã‚Š"
+"ã¾ã™ã€‚(egg ã‚„ yc-el ã®ã‚ˆã†ãª) ã„ãã¤ã‹ã®ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã¯åŒã˜ãƒ›ã‚¹ãƒˆä¸Šã§å‹•ä½œã—ã¦"
+"ã„ã¦ã‚‚ã“ã®ãƒ¢ãƒ¼ãƒ‰ã‚’å¿…è¦ã¨ã—ã¾ã™ã€‚"
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid "Manage /etc/hosts.canna automatically?"
+msgstr "/etc/hosts.canna ã‚’è‡ªå‹•çš„ã«ç®¡ç†ã—ã¾ã™ã‹?"
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid ""
+"The /etc/hosts.canna file lists hosts allowed to connect to the Canna server."
+msgstr ""
+"/etc/hosts.canna ãƒ•ã‚¡ã‚¤ãƒ«ã¯ã©ã®ãƒ›ã‚¹ãƒˆãŒã“ã®ã‹ã‚“ãªã‚µãƒ¼ãƒã«æ¥ç¶šã§ãã‚‹ã‹ã‚’åˆ¶å¾¡ã™"
+"ã‚‹ãƒªã‚¹ãƒˆã§ã™ã€‚"
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid ""
+"You should not accept this option if you prefer managing the file's contents "
+"manually."
+msgstr "ãƒ•ã‚¡ã‚¤ãƒ«ã®å†…å®¹ã‚’æ‰‹å‹•ã§æ‰±ã„ãŸã„ãŸå ´åˆã¯ã“ã®é¸æŠè‚¢ã‚’é¸ã°ãªã„ã§ãã ã•ã„ã€‚"
 
 #. Type: string
 #. Description
-#: ../templates:4001
-#, fuzzy
-msgid "Please enter the name of each host allowed to connect to this server"
-msgstr "¤³¤Î¤«¤ó¤Ê¥µ¡¼¥Ğ¤ËÀÜÂ³¤Ç¤­¤ë¥Û¥¹¥ÈÌ¾¤òÆşÎÏ¤·¤Æ¤¯¤À¤µ¤¤"
+#: ../templates:5001
+msgid "Hosts allowed to connect to this Canna server:"
+msgstr "ã“ã®ã‹ã‚“ãªã‚µãƒ¼ãƒã«æ¥ç¶šã§ãã‚‹ãƒ›ã‚¹ãƒˆå:"
 
 #. Type: string
 #. Description
-#: ../templates:4001
-#, fuzzy
+#: ../templates:5001
 msgid ""
 "Please enter the names of the hosts allowed to connect to this Canna server, "
 "separated by spaces."
 msgstr ""
-"¤³¤Î¤«¤ó¤Ê¥µ¡¼¥Ğ¤ËÀÜÂ³¤Ç¤­¤ë¥Û¥¹¥È¥Í¡¼¥à¤ò¥¹¥Ú¡¼¥¹¤Ç¶èÀÚ¤Ã¤ÆÆşÎÏ¤·¤Æ¤¯¤À¤µ"
-"¤¤¡£"
+"ã“ã®ã‹ã‚“ãªã‚µãƒ¼ãƒã«æ¥ç¶šã‚’è¨±å¯ã™ã‚‹ãƒ›ã‚¹ãƒˆã®åå‰ã‚’ã‚¹ãƒšãƒ¼ã‚¹ã§åŒºåˆ‡ã£ã¦å…¥åŠ›ã—ã¦ãã "
+"ã•ã„ã€‚"
 
 #. Type: string
 #. Description
-#: ../templates:4001
-#, fuzzy
-msgid ""
-"`unix'  is a special notation for allowing access via UNIX domain sockets."
-msgstr "`unix' ¤Ï UNIX ¥É¥á¥¤¥ó¥½¥±¥Ã¥È¤Ç¤Î¥¢¥¯¥»¥¹¤ò°ÕÌ£¤¹¤ëÆÃÊÌ¤Êµ­½Ò¤Ç¤¹¡£"
-
-#. Type: select
-#. Description
-#: ../libcanna1g.templates:1001
-msgid "Canna input style"
-msgstr "Canna ÆşÎÏ¥¹¥¿¥¤¥ë"
-
-#. Type: select
-#. Description
-#: ../libcanna1g.templates:1001
-#, fuzzy
-msgid ""
-"Please choose the default canna input style below, which will be installed "
-"if there is no previous configuration:"
+#: ../templates:5001
+msgid "You can use \"unix\" to allow access via UNIX domain sockets."
 msgstr ""
-"¥Ç¥Õ¥©¥ë¥È¤ÎÆşÎÏ¥¹¥¿¥¤¥ë¤òÁªÂò¤·¤Æ¤¯¤À¤µ¤¤¡£¤¹¤Ç¤ËÀßÄê¥Õ¥¡¥¤¥ë¤¬¥¤¥ó¥¹¥È¡¼¥ë"
-"¤µ¤ì¤Æ¤¤¤Ê¤±¤ì¤Ğ¤½¤ÎÀßÄê¤ò¥Ç¥Õ¥©¥ë¥È¤È¤·¤ÆÍøÍÑ¤·¤Ş¤¹¡§"
+"ã€Œunixã€ã‚’é¸ã‚“ã§ UNIX ãƒ‰ãƒ¡ã‚¤ãƒ³ã‚½ã‚±ãƒƒãƒˆçµŒç”±ã‚¢ã‚¯ã‚»ã‚¹ã‚’ä½¿ã†ã“ã¨ã‚‚å¯èƒ½ã§ã™ã€‚"
 
 #. Type: select
 #. Description
-#: ../libcanna1g.templates:1001
-#, fuzzy
-msgid ""
-" verbose - Canna3.5 default style with verbose comments\n"
-" 1.1     - old Canna style (ver. 1.1)\n"
-" 1.2     - old Canna style (ver. 1.2)\n"
-" jdaemon - jdaemon style\n"
-" just    - Justsystem ATOK like style\n"
-" lan5    - LAN5 like style\n"
-" matsu   - MATSU word processor like style\n"
-" skk     - SKK like style\n"
-" tut     - for TUT-Code\n"
-" unix    - UNIX style\n"
-" vje     - vje like style\n"
-" wx2+    - WX2+ style"
-msgstr ""
-" verbose - ¥³¥á¥ó¥ÈÉÕ¤Î Canna3.5 ¥Ç¥Õ¥©¥ë¥È¥¹¥¿¥¤¥ë\n"
-" 1.1     - µì Canna ¥¹¥¿¥¤¥ë (ver. 1.1)\n"
-" 1.2     - µì Canna ¥¹¥¿¥¤¥ë (ver. 1.2)\n"
-" jdaemon - jdaemon ¥¹¥¿¥¤¥ë\n"
-" just    - Justsystem ATOK É÷¥¹¥¿¥¤¥ë\n"
-" lan5    - LAN5 É÷¥¹¥¿¥¤¥ë\n"
-" matsu   - ¾¾¥ï¡¼¥É¥×¥í¥»¥Ã¥µÉ÷ style\n"
-" skk     - SKK É÷¥¹¥¿¥¤¥ë\n"
-" tut     - TUT-code ¸ş¤±\n"
-" unix    - UNIX ¥¹¥¿¥¤¥ë\n"
-" vje     - vje É÷¥¹¥¿¥¤¥ë\n"
-" wx2+    - WX2+ É÷¥¹¥¿¥¤¥ë"
+#: ../libcanna1g.templates:2001
+msgid "Canna input style:"
+msgstr "ã‹ã‚“ãªã®å…¥åŠ›æ–¹å¼"
 
-#~ msgid "Please choose default canna input style below:"
-#~ msgstr "¥Ç¥Õ¥©¥ë¥È¤ÎÆşÎÏ¥¹¥¿¥¤¥ë¤òÁªÂò¤·¤Æ¤¯¤À¤µ¤¤¡£"
+#. Type: select
+#. Description
+#: ../libcanna1g.templates:2001
+msgid ""
+"Please choose the default Canna input style:\n"
+" verbose: Canna3.5 default style with verbose comments;\n"
+" 1.1    : old Canna style (ver. 1.1);\n"
+" 1.2    : old Canna style (ver. 1.2);\n"
+" jdaemon: jdaemon style;\n"
+" just   : JustSystems ATOK style;\n"
+" lan5   : LAN5 style;\n"
+" matsu  : Matsu word processor style;\n"
+" skk    : SKK style;\n"
+" tut    : TUT-Code style;\n"
+" unix   : UNIX style;\n"
+" vje    : vje style;\n"
+" wx2+   : WX2+ style."
+msgstr ""
+"ã‹ã‚“ãªã®ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã®å…¥åŠ›å½¢å¼ã‚’é¸ã‚“ã§ãã ã•ã„:\n"
+" verbose - å†—é•·ãªã‚³ãƒ¡ãƒ³ãƒˆä»˜ã® Canna3.5 æ¨™æº–æ–¹å¼\n"
+" 1.1     - æ—§ Canna æ–¹å¼ (ver. 1.1)\n"
+" 1.2     - æ—§ Canna æ–¹å¼ (ver. 1.2)\n"
+" jdaemon - jdaemon æ–¹å¼\n"
+" just    - ã‚¸ãƒ£ã‚¹ãƒˆã‚·ã‚¹ãƒ†ãƒ  ATOK æ–¹å¼\n"
+" lan5    - LAN5 æ–¹å¼\n"
+" matsu   - æ¾ãƒ¯ãƒ¼ãƒ‰ãƒ—ãƒ­ã‚»ãƒƒã‚µæ–¹å¼\n"
+" skk     - SKK æ–¹å¼\n"
+" tut     - TUT-code å‘ã‘\n"
+" unix    - UNIX æ–¹å¼\n"
+" vje     - vje æ–¹å¼\n"
+" wx2+    - WX2+ æ–¹å¼"
+
+#~ msgid "Do you want to run the Canna server ?"
+#~ msgstr "ã‹ã‚“ãªã‚µãƒ¼ãƒã‚’èµ·å‹•ã—ã¾ã™ã‹?"
+
+#~ msgid "Do you want to connect to the Canna server from a remote host?"
+#~ msgstr "ãƒªãƒ¢ãƒ¼ãƒˆãƒ›ã‚¹ãƒˆã‹ã‚‰ã‹ã‚“ãªã‚µãƒ¼ãƒã«æ¥ç¶šã—ã¾ã™ã‹?"
+
+#~ msgid ""
+#~ "The Canna server only allows connections via UNIX domain sockets when the "
+#~ "`-inet' option is not specified.  This means that when the Canna server "
+#~ "is started without the `-inet' option, only clients which run on the same "
+#~ "host can connect to the server. Some clients such as, `egg' and `yc-el', "
+#~ "do not support UNIX domain socket and require the `-inet' option, even if "
+#~ "they run on the same host."
+#~ msgstr ""
+#~ "ã‹ã‚“ãªã‚µãƒ¼ãƒã¯ã€Œ-inetã€ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã‚’æŒ‡å®šã—ã¦ã„ãªã„å ´åˆã€UNIX ãƒ‰ãƒ¡ã‚¤ãƒ³ã‚½ã‚±ãƒƒ"
+#~ "ãƒˆçµŒç”±ã§ã—ã‹æ¥ç¶šã§ãã¾ã›ã‚“ã€‚ã“ã‚Œã¯ã€Œ-inetã€ã‚ªãƒ—ã‚·ãƒ§ãƒ³ç„¡ã—ã§èµ·å‹•ã—ãŸã‹ã‚“ãª"
+#~ "ã‚µãƒ¼ãƒã¯åŒã˜ãƒ›ã‚¹ãƒˆã§å‹•ã„ã¦ã„ã‚‹ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã‹ã‚‰ã—ã‹æ¥ç¶šã§ãã¾ã›ã‚“ã€‚ã¾ãŸ"
+#~ "ã€Œeggã€ã‚„ã€Œyc-elã€ã®ã‚ˆã†ãªã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆã§ã¯ UNIX ãƒ‰ãƒ¡ã‚¤ãƒ³ã‚½ã‚±ãƒƒãƒˆã‚’ã‚µãƒãƒ¼ãƒˆ"
+#~ "ã—ã¦ã„ãªã„ã®ã§ã€ãã®ã‚¯ãƒ©ã‚¤ã‚¢ãƒ³ãƒˆãŒåŒã˜ãƒ›ã‚¹ãƒˆã§å‹•ä½œã—ã¦ã„ãŸã¨ã—ã¦ã‚‚ã€ã€Œ-"
+#~ "inetã€ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã‚’åˆ©ç”¨ã™ã‚‹å¿…è¦ãŒã‚ã‚Šã¾ã™ã€‚"
+
+#~ msgid ""
+#~ "If you want to connect to this Canna server from remote hosts, or if you "
+#~ "want to use INET-domain-only software, you should run the server with the "
+#~ "`-inet' option."
+#~ msgstr ""
+#~ "ã“ã®ã‹ã‚“ãªã‚µãƒ¼ãƒã«ãƒªãƒ¢ãƒ¼ãƒˆãƒ›ã‚¹ãƒˆã‹ã‚‰æ¥ç¶šã—ãŸã„å ´åˆã‚„ INET-domain-only ã®ã‚½"
+#~ "ãƒ•ãƒˆã‚¦ã‚§ã‚¢ã‚’ä½¿ã†å ´åˆã¯ã€ã€Œ-inetã€ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã‚’ã¤ã‘ã¦ã‚µãƒ¼ãƒã‚’èµ·å‹•ã—ãªã‘ã‚Œã°"
+#~ "ãªã‚Šã¾ã›ã‚“ã€‚"
+
+#~ msgid ""
+#~ "By default /etc/hosts.canna will be managed with debconf. Refuse here if "
+#~ "you want to manage /etc/hosts.canna yourself."
+#~ msgstr ""
+#~ "/etc/hosts.cannaã¯ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã§ã¯debconfã§ç®¡ç†ã•ã‚Œã¾ã™ã€‚æ‰‹å‹•ã§ç®¡ç†ã—ãŸã„å ´"
+#~ "åˆã¯ã€ã“ã“ã§æ‹’å¦ã—ã¦ãã ã•ã„ã€‚"
+
+#~ msgid ""
+#~ "Please choose the default canna input style below, which will be "
+#~ "installed if there is no previous configuration:"
+#~ msgstr ""
+#~ "ä»¥ä¸‹ã‹ã‚‰ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã®å…¥åŠ›æ–¹å¼ã‚’é¸æŠã—ã¦ãã ã•ã„ã€‚ã™ã§ã«è¨­å®šãƒ•ã‚¡ã‚¤ãƒ«ãŒã‚¤ãƒ³ã‚¹"
+#~ "ãƒˆãƒ¼ãƒ«ã•ã‚Œã¦ã„ãªã‘ã‚Œã°ãã®è¨­å®šã‚’ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã¨ã—ã¦åˆ©ç”¨ã—ã¾ã™:"
