--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -14,9 +14,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: canna 3.7p3-2\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-10-29 11:01+0100\n"
-"PO-Revision-Date: 2008-07-14 13:04+0100\n"
+"Report-Msgid-Bugs-To: canna@packages.debian.org\n"
+"POT-Creation-Date: 2009-05-03 07:53+0200\n"
+"PO-Revision-Date: 2009-04-20 00:37+0100\n"
 "Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -27,88 +27,86 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../templates:1001
-msgid "Do you want to run the Canna server ?"
-msgstr "Vill du köra Canna-servern ?"
+#: ../templates:2001
+msgid "Should the Canna server run automatically?"
+msgstr "Ska Canna-servern starta automatiskt?"
 
 #. Type: boolean
 #. Description
-#: ../templates:1001
+#: ../templates:2001
 msgid ""
 "This package contains the Canna server and server-related utilities. If you "
-"are only interested in these utilities, you can disable the Canna server "
-"here."
+"are only interested in these utilities, you can disable the Canna server now."
 msgstr ""
 "Detta paket innehåller Canna-servern och server-relaterade verktyg. Om du "
 "bara är intresserad av dessa verktyg kan du stänga av Canna-servern här."
 
 #. Type: boolean
 #. Description
-#: ../templates:2001
-msgid "Do you want to connect to the Canna server from a remote host?"
-msgstr "Vill du ansluta till Canna-servern från en fjärrvärd?"
-
-#. Type: boolean
-#. Description
-#: ../templates:2001
-msgid ""
-"The Canna server only allows connections via UNIX domain sockets when the `-"
-"inet' option is not specified.  This means that when the Canna server is "
-"started without the `-inet' option, only clients which run on the same host "
-"can connect to the server. Some clients such as, `egg' and `yc-el', do not "
-"support UNIX domain socket and require the `-inet' option, even if they run "
-"on the same host."
-msgstr ""
-"Canna-servern tillåter bara anslutningar via UNIX-sockets när flaggan \"-inet"
-"\" inte är angiven. Det betyder att när Canna-servern startas upp utan "
-"flaggan \"-inet\" kommer bara klienter som körs på samma värd att kunna "
-"ansluta till servern. Vissa klienter såsom \"egg\" och \"yc-el\" saknar stöd "
-"för UNIX-socket och kräver flaggan \"-inet\" även om de körs på samma värd."
-
-#. Type: boolean
-#. Description
-#: ../templates:2001
-msgid ""
-"If you want to connect to this Canna server from remote hosts, or if you "
-"want to use INET-domain-only software, you should run the server with the `-"
-"inet' option."
-msgstr ""
-"Om du vill ansluta till denna Canna-server från fjärrvärdar eller om du bara "
-"vill använda programvara i INET-domänen ska du köra servern med flaggan \"-"
-"inet\"."
-
-#. Type: boolean
-#. Description
 #: ../templates:3001
-msgid "Manage /etc/hosts.canna with debconf ?"
-msgstr "Hantera /etc/hosts.canna med debconf ?"
-
-#. Type: boolean
-#. Description
-#: ../templates:3001
-msgid "/etc/hosts.canna controls which hosts can connect to this server."
-msgstr ""
-"/etc/hosts.canna kontrollerar vilka värdar som kan ansluta till denna server."
+msgid "Should the Canna server run in network mode?"
+msgstr "Ska Canna-servern köras i nätverksläge?"
 
 #. Type: boolean
 #. Description
 #: ../templates:3001
 msgid ""
-"By default /etc/hosts.canna will be managed with debconf. Refuse here if you "
-"want to manage /etc/hosts.canna yourself."
+"By default the Canna server will run without support for network "
+"connections, and will only accept connections on UNIX domain sockets, from "
+"clients running on the same host."
 msgstr ""
-"Som standard kommer /etc/hosts.canna att hanteras med debconf. Vägra här om "
-"du vill hantera /etc/hosts.canna själv."
+"Standardinställningen är att Canna-servern körs utan stöd för "
+"nätverksanslutningar och kommer bara att acceptera anslutningar via UNIX-"
+"domänsockets från klienter som körs på samma värd."
+
+#. Type: boolean
+#. Description
+#: ../templates:3001
+msgid ""
+"If you choose this option, network support will be activated, and the Canna "
+"server will accept connections on TCP sockets from clients that may be on "
+"remote hosts. Some clients (such as egg and yc-el) require this mode even if "
+"they run on the local host."
+msgstr ""
+"Om du väljer detta alternativ kommer nätverksstödet att aktiveras och Canna-"
+"servern kan du ta emot anslutningar på TCP-sockets från klienter som kan "
+"finnas på fjärrvärdar. Vissa klienter (som ex. egg och yc-el) kräver detta "
+"läge även om de körs på samma värd."
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid "Manage /etc/hosts.canna automatically?"
+msgstr "Hantera /etc/hosts.canna med automatiskt?"
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid ""
+"The /etc/hosts.canna file lists hosts allowed to connect to the Canna server."
+msgstr ""
+"Filen /etc/hosts.canna kontrollerar vilka värdar som kan ansluta till denna "
+"Canna-server."
+
+#. Type: boolean
+#. Description
+#: ../templates:4001
+msgid ""
+"You should not accept this option if you prefer managing the file's contents "
+"manually."
+msgstr ""
+"Du ska inte välja detta alternativ om du föredrar att hantera filens "
+"innehåll manuellt."
 
 #. Type: string
 #. Description
-#: ../templates:4001
-msgid "Please enter the name of each host allowed to connect to this server"
-msgstr "Ange namnen på de värdar som tillåts ansluta till denna server"
+#: ../templates:5001
+msgid "Hosts allowed to connect to this Canna server:"
+msgstr "Ange namnen på de värdar som tillåts ansluta till denna Canna-server:"
 
 #. Type: string
 #. Description
-#: ../templates:4001
+#: ../templates:5001
 msgid ""
 "Please enter the names of the hosts allowed to connect to this Canna server, "
 "separated by spaces."
@@ -118,55 +116,89 @@ msgstr ""
 
 #. Type: string
 #. Description
-#: ../templates:4001
-msgid ""
-"`unix'  is a special notation for allowing access via UNIX domain sockets."
+#: ../templates:5001
+msgid "You can use \"unix\" to allow access via UNIX domain sockets."
 msgstr ""
-"\"unix\" är ett specialkommando för att tillåta tillgång via UNIX-"
-"domänsockets."
+"Du kan använda \"unix\" för att tillåta tillgång via UNIX-domänsockets."
 
 #. Type: select
 #. Description
-#: ../libcanna1g.templates:1001
-msgid "Canna input style"
-msgstr "Inmatningsstil för Canna"
+#: ../libcanna1g.templates:2001
+msgid "Canna input style:"
+msgstr "Inmatningsstil för Canna:"
 
 #. Type: select
 #. Description
-#: ../libcanna1g.templates:1001
+#: ../libcanna1g.templates:2001
 msgid ""
-"Please choose the default canna input style below, which will be installed "
-"if there is no previous configuration:"
+"Please choose the default Canna input style:\n"
+" verbose: Canna3.5 default style with verbose comments;\n"
+" 1.1    : old Canna style (ver. 1.1);\n"
+" 1.2    : old Canna style (ver. 1.2);\n"
+" jdaemon: jdaemon style;\n"
+" just   : JustSystems ATOK style;\n"
+" lan5   : LAN5 style;\n"
+" matsu  : Matsu word processor style;\n"
+" skk    : SKK style;\n"
+" tut    : TUT-Code style;\n"
+" unix   : UNIX style;\n"
+" vje    : vje style;\n"
+" wx2+   : WX2+ style."
 msgstr ""
-"Välj standard för inmatningsstil för canna nedan, denna kommer att "
-"installeras om det inte redan finns en konfiguration:"
+"Ange vilken inmatninsstil som ska vara standard för Canna:\n"
+" verbose: Canna3.5 standardstil med pratiga kommentarer\n"
+" 1.1    : gammal Canna-stil (ver. 1.1);\n"
+" 1.1    : gammal Canna-stil (ver. 1.2);\n"
+" jdaemon: jdaemon-stil;\n"
+" just   : JustSystems ATOK-sti;\n"
+" lan5   : LAN5-stil;\n"
+" matsu  : MAtSU ordbehandlarstil;\n"
+" skk    : SKK-stil;\n"
+" tut    : TUT-kod-stil;\n"
+" unix   : UNIX-stil;\n"
+" vje    : vje-stil;\n"
+" wx2+   : WX2+-stil."
 
-#. Type: select
-#. Description
-#: ../libcanna1g.templates:1001
-msgid ""
-" verbose - Canna3.5 default style with verbose comments\n"
-" 1.1     - old Canna style (ver. 1.1)\n"
-" 1.2     - old Canna style (ver. 1.2)\n"
-" jdaemon - jdaemon style\n"
-" just    - Justsystem ATOK like style\n"
-" lan5    - LAN5 like style\n"
-" matsu   - MATSU word processor like style\n"
-" skk     - SKK like style\n"
-" tut     - for TUT-Code\n"
-" unix    - UNIX style\n"
-" vje     - vje like style\n"
-" wx2+    - WX2+ style"
-msgstr ""
-" verbose - Canna3.5 standardstil med informativa kommentarer\n"
-" 1.1     - gammal Canna-stil (ver. 1.1)\n"
-" 1.2     - gammal Canna-stil (ver. 1.2)\n"
-" jdaemon - jdaemon-stil\n"
-" just    - Justsystem ATOK-liknande stil\n"
-" lan5    - LAN5-liknande stil\n"
-" matsu   - MATSU-ordbehandlarliknande stil\n"
-" skk     - SKK-liknande stil\n"
-" tut     - för TUT-kod\n"
-" unix    - UNIX-stil\n"
-" vje     - vje-liknande stil\n"
-" wx2+    - WX2+-stil"
+#~ msgid "Do you want to run the Canna server ?"
+#~ msgstr "Vill du köra Canna-servern ?"
+
+#~ msgid "Do you want to connect to the Canna server from a remote host?"
+#~ msgstr "Vill du ansluta till Canna-servern från en fjärrvärd?"
+
+#~ msgid ""
+#~ "The Canna server only allows connections via UNIX domain sockets when the "
+#~ "`-inet' option is not specified.  This means that when the Canna server "
+#~ "is started without the `-inet' option, only clients which run on the same "
+#~ "host can connect to the server. Some clients such as, `egg' and `yc-el', "
+#~ "do not support UNIX domain socket and require the `-inet' option, even if "
+#~ "they run on the same host."
+#~ msgstr ""
+#~ "Canna-servern tillåter bara anslutningar via UNIX-sockets när flaggan \"-"
+#~ "inet\" inte är angiven. Det betyder att när Canna-servern startas upp "
+#~ "utan flaggan \"-inet\" kommer bara klienter som körs på samma värd att "
+#~ "kunna ansluta till servern. Vissa klienter såsom \"egg\" och \"yc-el\" "
+#~ "saknar stöd för UNIX-socket och kräver flaggan \"-inet\" även om de körs "
+#~ "på samma värd."
+
+#~ msgid ""
+#~ "If you want to connect to this Canna server from remote hosts, or if you "
+#~ "want to use INET-domain-only software, you should run the server with the "
+#~ "`-inet' option."
+#~ msgstr ""
+#~ "Om du vill ansluta till denna Canna-server från fjärrvärdar eller om du "
+#~ "bara vill använda programvara i INET-domänen ska du köra servern med "
+#~ "flaggan \"-inet\"."
+
+#~ msgid ""
+#~ "By default /etc/hosts.canna will be managed with debconf. Refuse here if "
+#~ "you want to manage /etc/hosts.canna yourself."
+#~ msgstr ""
+#~ "Som standard kommer /etc/hosts.canna att hanteras med debconf. Vägra här "
+#~ "om du vill hantera /etc/hosts.canna själv."
+
+#~ msgid ""
+#~ "Please choose the default canna input style below, which will be "
+#~ "installed if there is no previous configuration:"
+#~ msgstr ""
+#~ "Välj standard för inmatningsstil för canna nedan, denna kommer att "
+#~ "installeras om det inte redan finns en konfiguration:"
